# tnd_translator

./: README.md  pyproject.toml  tnd_build.sh  tnd_py_token.key
src/tnd_translator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_tnd_translator.py
